[gd_scene load_steps=15 format=2]

[ext_resource path="res://Enemies/RangeRobot/RangeRobot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Boss/Boss.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Turret/TurretBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Weapon/Blaster/BlasterShotAudioStreamPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Boss/boss_walk.png" type="Texture" id=5]
[ext_resource path="res://Player/Weapon/Grenade/Explosion.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/Boss/BossHUD/BossHUD.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 640, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 800, 0, 160, 160 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[node name="Boss" instance=ExtResource( 1 )]
script = ExtResource( 2 )
RangeRobotBullet = ExtResource( 3 )
ShotAudioStream = ExtResource( 4 )
Explosion = ExtResource( 6 )
BossHUD = ExtResource( 7 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 7 )

[node name="CollisionShape" parent="." index="1"]
position = Vector2( -2.47936, 0.30719 )

[node name="WeaponPosition" parent="." index="5"]
position = Vector2( 90.948, 43.3386 )

[node name="WalkAudioStreamPlayer2D" parent="." index="6"]
pitch_scale = 1.0
